
-Added old wood greatsword, reinforced old wood bow, old wood slingshot, old wood staff, shroom whip, and fungal flail
-Added Rotty's wrath, Jerry's Book of Stinkology, Stinky Slinger, and Branch of Gourd
-Added the gilded armor set
-Added giant feral rats
-Added a mask and trophy for spooky spirit
-Added boss checklist support for the new 1.4.4 version




~CHANGES TO EXISTING CONTENT~


-The ghoslty slingshot now has it's own ammo, ghastly orbs, which are dropped by spooky spirit along with the ghostly slingshot
-The harvester's scythe now spawns souls when you hit enemies instead of needing to kill them, and you now need 10 souls in order for them to attack enemies




~OTHER SMALLER CHANGES~

-Increased all orro & boro weapon sell prices because they were far too low
-Increased the use speed for the toilet paper and necromancy for dummies
-Increased the creepy candle's magic damage bonus to 7%
-Increased harvester's scythe knockback
-Added new sprites for big bone's thorn attacks to make them look better
-Buffed the amount of defense each piece of the rotten gourd armor gives
-Rotten gourd armor now requires old wood to craft along with the rotten chunks
-Increased the drop rate for the skull scepter, warlock's cloak, and warlock's hood from zomboid warlocks
-Renamed rotten chunk to moldy chunk, because rotten chunks are already a vanilla item
-Fixed moldy chunks stacking to 999 and not stacking to 9999
-Nerfed giant tortumor contact damage from 65 to 40
-All spooky mod boss masks now drop from that bosses respective treasure bag to be consistent with vanilla
-Spooky mod's pylons now give off colored lighting like vanilla ones do
-The vanilla eerie theme will now play in the spooky forest and swampy cemetery during blood moons




~BUGS AND OTHER FIXES~

-Fixed the spooky scroll causing the player sprite direction to spaz out if your cursor was in the middle of your player
-Localized big bone's spawn message because I accidentally forgot to

