@@ -197,7 +197,7 @@ namespace Spooky.Content.Projectiles.SpookyBiome
                     // This line creates a unit vector that is constantly rotated around the player. 10f controls how fast the projectile visually spins around the player
                     Vector2 offsetFromPlayer = new Vector2(player.direction).RotatedBy((float)Math.PI * 10f * (SpinningStateTimer / 60f) * player.direction);
 
-                    offsetFromPlayer.Y *= 1.2f;
+                    offsetFromPlayer.Y *= 0.85f;
                     if (offsetFromPlayer.Y * player.gravDir > 0f) 
                     {
                         offsetFromPlayer.Y *= 1f;
