@@ -34,7 +34,7 @@ namespace Spooky.Content.Tiles.SpookyBiome.Mushrooms
             b = 0.25f;
         }
 
-        public static Vector2 TileOffset => Vector2.One * 12;
+        public static Vector2 TileOffset => Lighting.LegacyEngine.Mode > 1 && Main.GameZoomTarget == 1 ? Vector2.Zero : Vector2.One * 12;
 
         public static Vector2 TileCustomPosition(int i, int j, Vector2? off = null)
         {
@@ -54,21 +54,6 @@ namespace Spooky.Content.Tiles.SpookyBiome.Mushrooms
 
         public override void PostDraw(int i, int j, SpriteBatch spriteBatch)
         {
-            Tile tile = Framing.GetTileSafely(i, j);
-            Color col = Lighting.GetColor(i, j);
-            float xOff = (float)Math.Sin((j * 19) * 0.04f) * 1.2f;
-
-            if (xOff == 1 && (j / 4f) == 0)
-            {
-                xOff = 0;
-            }
-
-            int frameSize = 16;
-            int frameOff = 0;
-            int frameSizeY = 16;
-
-            Vector2 pos = TileCustomPosition(i, j);
-
             Texture2D capTex = ModContent.Request<Texture2D>("Spooky/Content/Tiles/SpookyBiome/Mushrooms/GiantShroom1Cap").Value;
 
             //draw the mushroom cap, only draw it on the very first frame of the tile so it only draws once
@@ -100,21 +85,6 @@ namespace Spooky.Content.Tiles.SpookyBiome.Mushrooms
 
         public override void PostDraw(int i, int j, SpriteBatch spriteBatch)
         {
-            Tile tile = Framing.GetTileSafely(i, j);
-            Color col = Lighting.GetColor(i, j);
-            float xOff = (float)Math.Sin((j * 19) * 0.04f) * 1.2f;
-
-            if (xOff == 1 && (j / 4f) == 0)
-            {
-                xOff = 0;
-            }
-
-            int frameSize = 16;
-            int frameOff = 0;
-            int frameSizeY = 16;
-
-            Vector2 pos = TileCustomPosition(i, j);
-
             Texture2D capTex = ModContent.Request<Texture2D>("Spooky/Content/Tiles/SpookyBiome/Mushrooms/GiantShroom2Cap").Value;
 
             //draw the mushroom cap, only draw it on the very first frame of the tile so it only draws once
@@ -146,21 +116,6 @@ namespace Spooky.Content.Tiles.SpookyBiome.Mushrooms
 
         public override void PostDraw(int i, int j, SpriteBatch spriteBatch)
         {
-            Tile tile = Framing.GetTileSafely(i, j);
-            Color col = Lighting.GetColor(i, j);
-            float xOff = (float)Math.Sin((j * 19) * 0.04f) * 1.2f;
-
-            if (xOff == 1 && (j / 4f) == 0)
-            {
-                xOff = 0;
-            }
-
-            int frameSize = 16;
-            int frameOff = 0;
-            int frameSizeY = 16;
-
-            Vector2 pos = TileCustomPosition(i, j);
-
             Texture2D capTex = ModContent.Request<Texture2D>("Spooky/Content/Tiles/SpookyBiome/Mushrooms/GiantShroom3Cap").Value;
 
             //draw the mushroom cap, only draw it on the very first frame of the tile so it only draws once
@@ -192,21 +147,6 @@ namespace Spooky.Content.Tiles.SpookyBiome.Mushrooms
 
         public override void PostDraw(int i, int j, SpriteBatch spriteBatch)
         {
-            Tile tile = Framing.GetTileSafely(i, j);
-            Color col = Lighting.GetColor(i, j);
-            float xOff = (float)Math.Sin((j * 19) * 0.04f) * 1.2f;
-
-            if (xOff == 1 && (j / 4f) == 0)
-            {
-                xOff = 0;
-            }
-
-            int frameSize = 16;
-            int frameOff = 0;
-            int frameSizeY = 16;
-
-            Vector2 pos = TileCustomPosition(i, j);
-
             Texture2D capTex = ModContent.Request<Texture2D>("Spooky/Content/Tiles/SpookyBiome/Mushrooms/GiantShroom4Cap").Value;
 
             //draw the mushroom cap, only draw it on the very first frame of the tile so it only draws once
