@@ -84,6 +84,7 @@ Other New Additions:
 -All spooky mod boss masks now drop from that bosses respective treasure bag to be consistent with vanilla
 -Spooky mod's pylons now give off colored lighting like vanilla ones do
 -The vanilla eerie theme will now play in the spooky forest and swampy cemetery during blood moons
+-Lowered the spooky orange ghost's spawnrate
 
 
 
